# snakes-cafe

./: README.md  pyproject.toml  test.py
snakes_cafe/: snakes-cafe.py
