[tool.poetry]
name = "snakes-cafe"
version = "0.1.0"
description = ""
authors = ["ahmadabudames <ahmadabudamesmais1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
